# Gemusis

./: .gitignore  Makefile.am  configure.ac
inc/: gemusiscore.h  motodebug.h  nkwrapper.h  nuklear_sdl_renderer.h  options.h  tv.h  window.h
src/: main.c  renderloop.c
src/render/: motodebug.c  nuklear.c  options.c  tv.c  window.c
